# Doge-Memer

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
botfunctions/: actiongifs.py  economy.py  fiftyfifty.py  helpandinfo.py  misc.py  pyrandtoys.py  reddit.py  textreplies.py  utility.py
static/styles/: style.css
templates/: index.html
